--- a/index.html
+++ b/index.html
@@ -201,7 +201,12 @@
          class="inline-block px-6 py-3 rounded-lg bg-cyan-500 text-white font-semibold hover:bg-cyan-600 transition">
          Share My Wisdom
       </a>
-      <a href="wisdom.html" class="ml-3 inline-block text-indigo-600 hover:underline">View Wisdom Wall</a>
+      <!--
+        <a href="wisdom.html" class="ml-3 inline-block text-indigo-600 hover:underline">
+        View Wisdom Wall
+      </a>
+      -->
+
     </section>
 
     <!-- Ask The Sanctuary (Gemini) -->
