--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
     .aspect-video{position:relative;width:100%;padding-bottom:56.25%;}
     .aspect-video>iframe{position:absolute;inset:0;width:100%;height:100%;}
   </style>
+  <!-- Privacy-friendly analytics by Plausible -->
+<script async src="https://plausible.io/js/pa-Nj2nSV8L4u6iRao34TF3q.js"></script>
+<script>
+  window.plausible = window.plausible || function(){(plausible.q = plausible.q || []).push(arguments)};
+  plausible.init = plausible.init || function(i){plausible.o = i || {}};
+  plausible.init();
+</script>
 </head>
 <body class="min-h-screen antialiased text-slate-800">
 
