--- a/submit.html
+++ b/submit.html
@@ -23,6 +23,14 @@
     .btn{transition:transform .2s ease, box-shadow .2s ease;box-shadow:0 4px 6px rgba(0,0,0,.08);}
     .btn:hover{transform:translateY(-1px);box-shadow:0 6px 12px rgba(0,0,0,.12);}
   </style>
+  <!-- Privacy-friendly analytics by Plausible -->
+<script async src="https://plausible.io/js/pa-Nj2nSV8L4u6iRao34TF3q.js"></script>
+<script>
+  window.plausible = window.plausible || function(){(plausible.q = plausible.q || []).push(arguments)};
+  plausible.init = plausible.init || function(i){plausible.o = i || {}};
+  plausible.init();
+</script>
+
 </head>
 <body>
   <header class="gradient-bg w-full py-10 text-center text-white shadow-md rounded-b-2xl mb-8">
