--- a/wisdom.html
+++ b/wisdom.html
@@ -23,6 +23,14 @@
     .fade-in{animation:fadeIn .9s ease forwards;}
     @keyframes fadeIn{from{opacity:0;transform:scale(.98);}to{opacity:1;transform:scale(1);}}
   </style>
+  <!-- Privacy-friendly analytics by Plausible -->
+<script async src="https://plausible.io/js/pa-Nj2nSV8L4u6iRao34TF3q.js"></script>
+<script>
+  window.plausible = window.plausible || function(){(plausible.q = plausible.q || []).push(arguments)};
+  plausible.init = plausible.init || function(i){plausible.o = i || {}};
+  plausible.init();
+</script>
+
 </head>
 <body>
   <header class="gradient-bg text-white py-10 rounded-b-3xl shadow-lg mb-4 text-center">
